fixed footer laytout on mobiles

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -71,12 +71,16 @@
 }
 .social-media {
   width: 15%;
+  @include breakpoint-down("medium-700") {
+    width: 30%;
+  }
   &__title {
   }
   &__desc {
   }
   .socials {
     display: flex;
+
     &__item {
     }
     &__link {
